# ackermann

./: CMakeLists.txt  README.md  ackermann.cpp
calg/: algorithm.h  calg.h  eval.h  expression.h  factory.h  frontend.h  matcher.h
calg/detail/: debug_print.h  throw.h  traits.h
calg/transform/: ackermann_function.h  constant_folding.h  plus_folding.h  symbol_substitute.h
test/: ackermann.cpp  match.cpp
